--- a/agents/speech_to_text/Dockerfile
+++ b/agents/speech_to_text/Dockerfile
@@ -1,18 +1,31 @@
 FROM python:3.9-slim
 
-# Instala dependências do sistema (Git e FFmpeg)
-RUN apt-get update && apt-get install -y git ffmpeg
+# Instala dependências do sistema (Git, FFmpeg, PortAudio e ferramentas de build)
+RUN apt-get update && apt-get install -y \
+    git \
+    ffmpeg \
+    portaudio19-dev \
+    gcc \
+    g++ \
+    make \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
 
+# Define o diretório de trabalho
 WORKDIR /app
 
-# Copia o requirements.txt e instala dependências
-COPY ../requirements.txt .
+# Copia os requisitos para instalação das dependências
+COPY ../requirements.txt /app/requirements.txt
+
+# Instala as dependências do Python
 RUN pip install --no-cache-dir -U pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r /app/requirements.txt
 
-# Copia o código do agente
-COPY agents/speech_to_text /app
+# Copia o código do serviço para dentro do contêiner
+COPY agents/speech_to_text /app/speech_to_text
 
+# Expõe a porta 8001 para comunicação
 EXPOSE 8001
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8001"]
+# Define o comando de inicialização do FastAPI/Uvicorn
+CMD ["sh", "-c", "PYTHONPATH=/app uvicorn speech_to_text.listen:app --host 0.0.0.0 --port 8001"]
