--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -21,7 +21,10 @@ RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # Copia todo o código necessário para o contêiner
 COPY api /app/api
-COPY agents /app/agents
+
+# Define variáveis de ambiente para comunicação REST entre os agentes
+ENV SPEECH_TO_TEXT_URL="http://speech_to_text:8001"
+ENV MUSIC_GENERATOR_URL="http://music_generator:8002"
 
 # Define o caminho para o Python encontrar os módulos corretamente
 ENV PYTHONPATH=/app
@@ -31,3 +34,4 @@ EXPOSE 8000
 
 # Comando para iniciar a API
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
